feat(be): admin product backend functionalities
